# name: test_deprecation_warning
  'Rendering nested serializer as relationship is deprecated. Use `ResourceRelatedField` instead if DummyNestedSerializer in serializer example.tests.test_errors.test_deprecation_warning.<locals>.DummySerializer should remain a relationship. Otherwise set JSON_API_SERIALIZE_NESTED_SERIALIZERS_AS_ATTRIBUTE to True to render nested serializer as nested json attribute'
---
# name: test_first_level_attribute_error
  <class 'list'> [
    <class 'dict'> {
      'code': 'required',
      'detail': ErrorDetail(string='This field is required.', code='required'),
      'source': <class 'dict'> {
        'pointer': '/data/attributes/headline',
      },
      'status': '400',
    },
  ]
---
# name: test_first_level_custom_attribute_error
  <class 'list'> [
    <class 'dict'> {
      'detail': ErrorDetail(string='Too short', code='invalid'),
      'source': <class 'dict'> {
        'pointer': '/data/attributes/body-text',
      },
      'title': ErrorDetail(string='Too Short title', code='invalid'),
    },
  ]
---
# name: test_many_third_level_dict_errors
  <class 'list'> [
    <class 'dict'> {
      'code': 'required',
      'detail': ErrorDetail(string='This field is required.', code='required'),
      'source': <class 'dict'> {
        'pointer': '/data/attributes/comments/0/attachment/data',
      },
      'status': '400',
    },
    <class 'dict'> {
      'code': 'required',
      'detail': ErrorDetail(string='This field is required.', code='required'),
      'source': <class 'dict'> {
        'pointer': '/data/attributes/comments/0/body',
      },
      'status': '400',
    },
  ]
---
# name: test_second_level_array_error
  <class 'list'> [
    <class 'dict'> {
      'code': 'required',
      'detail': ErrorDetail(string='This field is required.', code='required'),
      'source': <class 'dict'> {
        'pointer': '/data/attributes/comments/0/body',
      },
      'status': '400',
    },
  ]
---
# name: test_second_level_dict_error
  <class 'list'> [
    <class 'dict'> {
      'code': 'required',
      'detail': ErrorDetail(string='This field is required.', code='required'),
      'source': <class 'dict'> {
        'pointer': '/data/attributes/comment/body',
      },
      'status': '400',
    },
  ]
---
# name: test_third_level_array_error
  <class 'list'> [
    <class 'dict'> {
      'code': 'required',
      'detail': ErrorDetail(string='This field is required.', code='required'),
      'source': <class 'dict'> {
        'pointer': '/data/attributes/comments/0/attachments/0/data',
      },
      'status': '400',
    },
  ]
---
# name: test_third_level_custom_array_error
  <class 'list'> [
    <class 'dict'> {
      'code': 'invalid',
      'detail': ErrorDetail(string='Too short data', code='invalid'),
      'source': <class 'dict'> {
        'pointer': '/data/attributes/comments/0/attachments/0/data',
      },
      'status': '400',
    },
  ]
---
# name: test_third_level_dict_error
  <class 'list'> [
    <class 'dict'> {
      'code': 'required',
      'detail': ErrorDetail(string='This field is required.', code='required'),
      'source': <class 'dict'> {
        'pointer': '/data/attributes/comments/0/attachment/data',
      },
      'status': '400',
    },
  ]
---
